--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <script src="js/Player1.js"></script>
     <script src="js/Player2.js"></script>
 
+    <!-- Incluye el script del enemigo -->
+    <script src="js/Enemy.js"></script>
+
     <!-- Incluye el script de las Plataformas -->
     <script src="js/PlatformRight.js"></script>
 </body>
